<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/additionConfigText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSoustractiob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/soustractionConfigText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <Button
        android:id="@+id/buttonBorneMinSous"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/majBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toEndOf="@+id/editTextBorneMinSous"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoustractiob" />

    <EditText
        android:id="@+id/editTextBorneMinSous"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewBorneMinSous"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoustractiob" />

    <Button
        android:id="@+id/buttonBorneMaxSous"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:text="@string/majBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toEndOf="@+id/editTextBorneMaxSous"
        app:layout_constraintTop_toBottomOf="@+id/buttonBorneMinSous" />

    <TextView
        android:id="@+id/textViewBorneMinSous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/borneMinText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoustractiob" />

    <TextView
        android:id="@+id/textViewBorneMaxSous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:text="@string/borneMaxText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBorneMinSous" />

    <EditText
        android:id="@+id/editTextBorneMaxSous"
        android:layout_width="88dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewBorneMaxSous"
        app:layout_constraintTop_toBottomOf="@+id/editTextBorneMinSous" />

    <TextView
        android:id="@+id/textViewBorneMinAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/borneMinText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <EditText
        android:id="@+id/editTextBorneMinAdd"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewBorneMinAdd"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <Button
        android:id="@+id/buttonBorneMinAdd"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:text="@string/majBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toEndOf="@+id/editTextBorneMinAdd"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <Button
        android:id="@+id/buttonBorneMaxAdd"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:text="@string/majBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toEndOf="@+id/editTextBorneMaxAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonBorneMinAdd" />

    <EditText
        android:id="@+id/editTextBorneMaxAdd"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewborneMaxAdd"
        app:layout_constraintTop_toBottomOf="@+id/editTextBorneMinAdd" />

    <TextView
        android:id="@+id/textViewborneMaxAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:text="@string/borneMaxText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBorneMinAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>
